--- a/composer.json
+++ b/composer.json
@@ -174,6 +174,7 @@
         "drupal/webform_mailchimp": "^5.9",
         "drush/drush": "10.6.2",
         "furf/jquery-ui-touch-punch": "^1.0",
+        "geocoder-php/google-maps-provider": "^4.7",
         "league/flysystem-sftp": "^2.0",
         "topfloor/composer-cleanup-vcs-dirs": "^1.1",
         "vlucas/phpdotenv": "^5.3",
@@ -204,7 +205,8 @@
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
             "drupal/core-vendor-hardening": true,
-            "topfloor/composer-cleanup-vcs-dirs": true
+            "topfloor/composer-cleanup-vcs-dirs": true,
+            "php-http/discovery": true
         }
     },
     "autoload": {
