APEX-99: Done theming for Products list.

--- a/config/campbell/default/views.view.product_category.yml
+++ b/config/campbell/default/views.view.product_category.yml
@@ -38,7 +38,7 @@ display:
           entity_type: node
           plugin_id: entity_link
           label: ''
-          exclude: true
+          exclude: false
           alter:
             alter_text: false
             text: ''
@@ -79,7 +79,7 @@ display:
           empty_zero: false
           hide_alter_empty: true
           text: ''
-          output_url_as_text: false
+          output_url_as_text: true
           absolute: false
         field_media:
           id: field_media
@@ -152,7 +152,7 @@ display:
           group_type: group
           admin_label: ''
           plugin_id: field
-          label: 'Part#'
+          label: ''
           exclude: false
           alter:
             alter_text: false
@@ -215,7 +215,7 @@ display:
           group_type: group
           admin_label: ''
           plugin_id: field
-          label: Description
+          label: ''
           exclude: false
           alter:
             alter_text: false
@@ -278,11 +278,11 @@ display:
           group_type: group
           admin_label: ''
           plugin_id: custom
-          label: ''
+          label: 'Distributor link'
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="/where-to-buy/" title="Find a Distributor" class="gray-btn btn-distributor"><span><span>Find a Distributor</span></span></a>'
+            text: /where-to-buy
             make_link: false
             path: ''
             absolute: false
@@ -312,6 +312,55 @@ display:
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: false
+        nothing_1:
+          id: nothing_1
+          table: views
+          field: nothing
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: custom
+          label: 'Distributor Label'
+          exclude: false
+          alter:
+            alter_text: true
+            text: 'Find a Distributor'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
