feature/APEX-102: campbell products listing filter

--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -24,6 +24,7 @@ module:
   breakpoint: 0
   campbell_common: 0
   campbell_migrations: 0
+  campbell_product_category_filtering: 0
   ckeditor: 0
   classy_paragraphs: 0
   color: 0
