--- a/docroot/themes/custom/campbell/campbell.libraries.yml
+++ b/docroot/themes/custom/campbell/campbell.libraries.yml
@@ -38,3 +38,16 @@ slider:
   dependencies:
     - core/jquery
     - core/js-cookie
+
+node--product-category:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/full--product-category.css: { }
+  js:
+    js/libraries/node/full--product-category.js: { }
+
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
