--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -39,6 +39,7 @@ module:
   datetime: 0
   datetime_range: 0
   dynamic_page_cache: 0
+  easy_breadcrumb: 0
   editor: 0
   editor_file: 0
   entity_browser: 0
