Added QA domains in stage server

--- a/config/clecotools/remote_stage/language.negotiation.yml
+++ b/config/clecotools/remote_stage/language.negotiation.yml
@@ -5,6 +5,6 @@ url:
     de: de
     gb: gb
   domains:
-    en: stg-www.clecotools.com
-    de: stg-www.clecotools.de
-    gb: stg-www.clecotools.co.uk
+    en: qa-www.clecotools.com
+    de: qa-www.clecotools.de
+    gb: qa-www.clecotools.co.uk
