--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -46,6 +46,7 @@ module:
   entity_reference_revisions: 0
   environment_indicator: 0
   environment_indicator_ui: 0
+  feeds: 0
   field: 0
   field_group: 0
   field_group_settings: 0
