--- a/config/campbell/default/core.entity_view_display.node.multisite_featured.default.yml
+++ b/config/campbell/default/core.entity_view_display.node.multisite_featured.default.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.multisite_featured.field_read_more
     - field.field.node.multisite_featured.field_related_featured_products
     - field.field.node.multisite_featured.field_short_description
+    - field.field.node.multisite_featured.field_showed_on_listing_page
     - field.field.node.multisite_featured.field_video
     - node.type.multisite_featured
   module:
@@ -66,6 +67,7 @@ hidden:
   field_listing_text_for_video: true
   field_read_more: true
   field_short_description: true
+  field_showed_on_listing_page: true
   langcode: true
   links: true
   search_api_excerpt: true
