--- a/config/campbell/default/core.entity_view_display.node.multisite_featured.teaser.yml
+++ b/config/campbell/default/core.entity_view_display.node.multisite_featured.teaser.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.multisite_featured.field_read_more
     - field.field.node.multisite_featured.field_related_featured_products
     - field.field.node.multisite_featured.field_short_description
+    - field.field.node.multisite_featured.field_showed_on_listing_page
     - field.field.node.multisite_featured.field_video
     - node.type.multisite_featured
   module:
@@ -47,6 +48,7 @@ hidden:
   field_read_more: true
   field_related_featured_products: true
   field_short_description: true
+  field_showed_on_listing_page: true
   field_video: true
   langcode: true
   search_api_excerpt: true
