APEX-106: Added configurations for geocoder module
APEX-106: Changed to default configurations for geocoder module

--- a/config/clecotools/default/geocoder.geocoder_provider.file.yml
+++ b/config/clecotools/default/geocoder.geocoder_provider.file.yml
@@ -1,4 +1,4 @@
-uuid: 24683a75-dc7f-427b-b9b9-36d7ad20e3e3
+uuid: 975e2e18-a7d8-4400-a8b4-4696181e2379
 langcode: en
 status: true
 dependencies:
@@ -7,5 +7,4 @@ dependencies:
 id: file
 label: File
 plugin: file
-configuration:
-  apiKey: null
+configuration: {  }
