--- a/config/clecotools/default/geocoder.geocoder_provider.random.yml
+++ b/config/clecotools/default/geocoder.geocoder_provider.random.yml
@@ -1,9 +1,8 @@
-uuid: 74ed65d9-e20f-485c-978c-241f34bfa557
+uuid: 592af163-0053-4bc0-87a4-ebaeb963038f
 langcode: en
 status: true
 dependencies: {  }
 id: random
 label: Random
 plugin: random
-configuration:
-  apiKey: null
+configuration: {  }
