--- a/config/campbell/default/block.block.heroimage_featured_content.yml
+++ b/config/campbell/default/block.block.heroimage_featured_content.yml
@@ -1,23 +1,23 @@
-uuid: 6daba96f-40ee-4295-b66a-a0e33d33b9a1
+uuid: 741eed6b-ff50-429b-aab5-688b27918451
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.hero_image_product_category
+    - fixed_block_content.fixed_block_content.hero_image_featured_content
   module:
     - fixed_block_content
     - node
   theme:
     - campbell
-id: heroimageproductcategory
+id: heroimage_featured_content
 theme: campbell
 region: pre_content
-weight: -18
+weight: -19
 provider: null
-plugin: 'fixed_block_content:hero_image_product_category'
+plugin: 'fixed_block_content:hero_image_featured_content'
 settings:
-  id: 'fixed_block_content:hero_image_product_category'
-  label: 'Hero Image Product Category'
+  id: 'fixed_block_content:hero_image_featured_content'
+  label: 'Hero Image - Featured content'
   label_display: '0'
   provider: fixed_block_content
   view_mode: ''
@@ -28,4 +28,4 @@ visibility:
     context_mapping:
       node: '@node.node_route_context:node'
     bundles:
-      product_category: product_category
+      multisite_featured: multisite_featured
