--- a/config/campbell/default/core.entity_view_display.node.product.featured_content.yml
+++ b/config/campbell/default/core.entity_view_display.node.product.featured_content.yml
@@ -47,8 +47,10 @@ content:
 hidden:
   body: true
   field_featured_product: true
+  field_keywords: true
   field_launch_date: true
   field_new_product: true
+  field_pdfs: true
   field_product_classifications: true
   field_product_features: true
   field_product_images: true
