[APEX-42] Add local retailer field related updates

--- a/config/campbell/default/field.field.node.local_retailer.field_address.yml
+++ b/config/campbell/default/field.field.node.local_retailer.field_address.yml
@@ -22,6 +22,14 @@ settings:
     CA: CA
     US: US
   langcode_override: ''
-  field_overrides: {  }
+  field_overrides:
+    givenName:
+      override: optional
+    familyName:
+      override: optional
+    locality:
+      override: optional
+    administrativeArea:
+      override: optional
   fields: {  }
 field_type: address
