--- a/config/campbell/default/field.field.node.local_retailer.field_county.yml
+++ b/config/campbell/default/field.field.node.local_retailer.field_county.yml
@@ -9,7 +9,7 @@ id: node.local_retailer.field_county
 field_name: field_county
 entity_type: node
 bundle: local_retailer
-label: Country
+label: County
 description: ''
 required: false
 translatable: false
