--- a/docroot/themes/custom/campbell/campbell.libraries.yml
+++ b/docroot/themes/custom/campbell/campbell.libraries.yml
@@ -39,10 +39,20 @@ slider:
     - core/jquery
     - core/js-cookie
 
-node--product-category:
+view--new-products:
   version: 1.x
   js:
-    js/full--product-category.js: { }
+    js/new-products.js: {}
+
+node--teaser--product:
+  version: 1.x
+  js:
+    js/teaser--product.js: {}
+
+node--full--product-category:
+  version: 1.x
+  js:
+    js/full--product-category.js: {}
 
   dependencies:
     - core/drupal
