Revert "feature/APEX-154: new product page for campbell (pull request #134)"

--- a/docroot/themes/custom/campbell/campbell.libraries.yml
+++ b/docroot/themes/custom/campbell/campbell.libraries.yml
@@ -39,20 +39,10 @@ slider:
     - core/jquery
     - core/js-cookie
 
-view--new-products:
+node--product-category:
   version: 1.x
   js:
-    js/new-products.js: {}
-
-node--teaser--product:
-  version: 1.x
-  js:
-    js/teaser--product.js: {}
-
-node--full--product-category:
-  version: 1.x
-  js:
-    js/full--product-category.js: {}
+    js/full--product-category.js: { }
 
   dependencies:
     - core/drupal
