--- a/config/clecotools/default/core.extension.yml
+++ b/config/clecotools/default/core.extension.yml
@@ -7,6 +7,7 @@ module:
   admin_toolbar: 0
   advagg: 0
   advagg_js_minify: 0
+  apex_migrations: 0
   advagg_css_minify: 0
   atg_api: 0
   atg_callout: 0
@@ -27,6 +28,7 @@ module:
   breakpoint: 0
   captcha: 0
   ckeditor: 0
+  cleco_migrations: 0
   color: 0
   comment: 0
   config: 0
@@ -94,6 +96,8 @@ module:
   menu_ui: 0
   metatag: 0
   migrate: 0
+  migrate_plus: 0
+  migrate_tools: 0
   mysql: 0
   node: 0
   options: 0
