--- a/config/gearwrench/default/search_api.index.acquia_search_index.yml
+++ b/config/gearwrench/default/search_api.index.acquia_search_index.yml
@@ -227,7 +227,7 @@ field_settings:
     boost: 0.5
     configuration:
       roles:
-        anonymous: anonymous
+        - anonymous
       view_mode:
         'entity:node':
           landing_page: full
