--- a/config/sata_brazil/default/block.block.webform.yml
+++ b/config/sata_brazil/default/block.block.webform.yml
@@ -16,7 +16,7 @@ provider: null
 plugin: webform_block
 settings:
   id: webform_block
-  label: 'Sign Up For Tool News'
+  label: 'CADASTRE-SE NA NOSSA NEWSLETTER'
   label_display: visible
   provider: webform
   webform_id: email_sign_up
