--- a/config/clecotools/default/swiftmailer.transport.yml
+++ b/config/clecotools/default/swiftmailer.transport.yml
@@ -1,14 +1,14 @@
 _core:
   default_config_hash: 0dJfQivKgyEp-S8D6gSRTBbpRFApE3VkpltnPMBQ5OY
 transport: smtp
-smtp_host: smtp.atg.root
-smtp_port: 25
-smtp_encryption: '0'
+smtp_host: smtp.office365.com
+smtp_port: 587
+smtp_encryption: tls
 sendmail_path: /usr/sbin/sendmail
 sendmail_mode: bs
 smtp_credential_provider: swiftmailer
 smtp_credentials:
   swiftmailer:
-    username: ''
-    password: null
+    username: no-reply@apextoolgroup.com
+    password: U%v2Bu3G!s9Kp+rVJcZB
 spool_directory: ''
