APEX-342: Worked on related product backend section

--- a/config/campbell/default/node.type.product.yml
+++ b/config/campbell/default/node.type.product.yml
@@ -15,4 +15,4 @@ description: 'A <em>Product</em> is an individual catalog item that is automatic
 help: ''
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
