--- a/config/campbell/local/stage_file_proxy.settings.yml
+++ b/config/campbell/local/stage_file_proxy.settings.yml
@@ -1,8 +1,8 @@
 _core:
   default_config_hash: ttd8HXcqwSjGgp-fWA3gUA8q4TNvXB0a72pkFlnF56g
 hotlink: false
-origin: ''
-origin_dir: ''
+origin: 'https://dev-www.campbellchainandfittings.com'
+origin_dir: sites/campbell/files
 use_imagecache_root: true
 verify: true
 excluded_extensions: ''
