--- a/config/clecotools/default/core.entity_form_display.node.product.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.product.default.yml
@@ -4,9 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.node.product.body
+    - field.field.node.product.field_downloads
     - field.field.node.product.field_footnotes
     - field.field.node.product.field_long_description
     - field.field.node.product.field_media
+    - field.field.node.product.field_model_specification
     - field.field.node.product.field_product_classifications
     - field.field.node.product.field_product_features_cp
     - field.field.node.product.field_product_images
@@ -17,6 +19,7 @@ dependencies:
   module:
     - content_moderation
     - media_library
+    - paragraphs
     - path
     - text
 id: node.product.default
@@ -40,6 +43,13 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_downloads:
+    type: media_library_widget
+    weight: 132
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
   field_footnotes:
     type: text_textarea
     weight: 126
@@ -62,6 +72,24 @@ content:
     region: content
     settings:
       media_types: {  }
+    third_party_settings: {  }
+  field_model_specification:
+    type: paragraphs
+    weight: 131
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
   field_product_classifications:
     type: entity_reference_autocomplete
