--- a/config/campbell/default/core.entity_view_display.node.product.markets.yml
+++ b/config/campbell/default/core.entity_view_display.node.product.markets.yml
@@ -29,17 +29,18 @@ mode: markets
 content:
   field_long_description:
     type: string
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     weight: 1
     region: content
   field_media:
-    type: entity_reference_label
-    label: above
+    type: entity_reference_entity_view
+    label: hidden
     settings:
-      link: true
+      view_mode: embed
+      link: false
     third_party_settings: {  }
     weight: 0
     region: content
