--- a/config/campbell/default/core.entity_form_display.node.markets.default.yml
+++ b/config/campbell/default/core.entity_form_display.node.markets.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.markets.body
     - field.field.node.markets.field_banner_image
     - field.field.node.markets.field_listing_image
+    - field.field.node.markets.field_market_logo
     - field.field.node.markets.field_related_products
     - field.field.node.markets.field_short_description
     - node.type.markets
@@ -20,7 +21,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 12
     region: content
     settings:
       rows: 9
@@ -30,27 +31,34 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
   field_banner_image:
     type: media_library_widget
-    weight: 123
+    weight: 9
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_listing_image:
     type: media_library_widget
-    weight: 124
+    weight: 13
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
+  field_market_logo:
+    type: media_library_widget
+    weight: 11
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_related_products:
     type: entity_reference_autocomplete
-    weight: 125
+    weight: 14
     region: content
     settings:
       match_operator: CONTAINS
@@ -60,7 +68,7 @@ content:
     third_party_settings: {  }
   field_short_description:
     type: text_textarea
-    weight: 122
+    weight: 10
     region: content
     settings:
       rows: 5
@@ -68,41 +76,41 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 15
+    weight: 4
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 120
+    weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 16
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -110,7 +118,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
@@ -119,7 +127,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
