--- a/config/campbell/default/core.entity_view_display.node.markets.default.yml
+++ b/config/campbell/default/core.entity_view_display.node.markets.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.markets.body
     - field.field.node.markets.field_banner_image
     - field.field.node.markets.field_listing_image
+    - field.field.node.markets.field_market_logo
     - field.field.node.markets.field_related_products
     - field.field.node.markets.field_short_description
     - node.type.markets
@@ -33,9 +34,18 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-  field_related_products:
+  field_market_logo:
     type: entity_reference_entity_view
     label: hidden
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    weight: 4
+    region: content
+  field_related_products:
+    type: entity_reference_entity_view
+    label: above
     settings:
       view_mode: markets
       link: false
