--- a/config/campbell/default/core.entity_form_display.block_content.media_center_landing_page.default.yml
+++ b/config/campbell/default/core.entity_form_display.block_content.media_center_landing_page.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.block_content.media_center_landing_page.field_display_name
     - field.field.block_content.media_center_landing_page.field_icon_type
     - field.field.block_content.media_center_landing_page.field_link
+    - field.field.block_content.media_center_landing_page.field_weight_media_center
   module:
     - link
 id: block_content.media_center_landing_page.default
@@ -36,6 +37,13 @@ content:
     settings:
       placeholder_url: ''
       placeholder_title: ''
+    third_party_settings: {  }
+  field_weight_media_center:
+    type: number
+    weight: 27
+    region: content
+    settings:
+      placeholder: ''
     third_party_settings: {  }
   info:
     type: string_textfield
