--- a/config/campbell/default/core.entity_view_display.node.product.teaser.yml
+++ b/config/campbell/default/core.entity_view_display.node.product.teaser.yml
@@ -43,10 +43,12 @@ content:
     region: content
 hidden:
   field_featured_product: true
+  field_keywords: true
   field_launch_date: true
   field_long_description: true
   field_media: true
   field_new_product: true
+  field_pdfs: true
   field_product_classifications: true
   field_product_features: true
   field_product_images: true
