--- a/config/campbell/default/core.entity_view_display.node.product.default.yml
+++ b/config/campbell/default/core.entity_view_display.node.product.default.yml
@@ -39,7 +39,7 @@ content:
     region: content
   field_featured_product:
     type: boolean
-    label: above
+    label: hidden
     settings:
       format: default
       format_custom_false: ''
@@ -49,14 +49,14 @@ content:
     region: content
   field_keywords:
     type: basic_string
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 16
     region: content
   field_launch_date:
     type: datetime_default
-    label: above
+    label: hidden
     settings:
       timezone_override: ''
       format_type: medium
@@ -65,7 +65,7 @@ content:
     region: content
   field_long_description:
     type: string
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -73,7 +73,7 @@ content:
     region: content
   field_media:
     type: entity_reference_label
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
@@ -81,7 +81,7 @@ content:
     region: content
   field_new_product:
     type: boolean
-    label: above
+    label: hidden
     settings:
       format: default
       format_custom_false: ''
@@ -91,7 +91,7 @@ content:
     region: content
   field_pdfs:
     type: entity_reference_label
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
@@ -99,7 +99,7 @@ content:
     region: content
   field_product_classifications:
     type: entity_reference_label
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
@@ -107,7 +107,7 @@ content:
     region: content
   field_product_features:
     type: string
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -115,24 +115,24 @@ content:
     region: content
   field_product_images:
     type: entity_reference_entity_view
-    label: above
+    label: hidden
     settings:
-      view_mode: default
+      view_mode: embed
       link: false
     third_party_settings: {  }
     weight: 8
     region: content
   field_product_specifications:
     type: entity_reference_label
-    label: above
+    label: hidden
     settings:
-      link: true
+      link: false
     third_party_settings: {  }
     weight: 9
     region: content
   field_related_products:
     type: entity_reference_label
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
@@ -140,7 +140,7 @@ content:
     region: content
   field_set:
     type: boolean
-    label: above
+    label: hidden
     settings:
       format: default
       format_custom_false: ''
@@ -150,7 +150,7 @@ content:
     region: content
   field_set_components:
     type: entity_reference_label
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
@@ -158,7 +158,7 @@ content:
     region: content
   field_sku_group:
     type: string
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -166,7 +166,7 @@ content:
     region: content
   field_upc:
     type: string
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
