--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -10,6 +10,7 @@ module:
   advagg_css_minify: 0
   advagg_js_minify: 0
   allowed_formats: 0
+  apex_common: 0
   apex_migrations: 0
   automated_cron: 0
   better_exposed_filters: 0
