--- a/config/clecotools/default/core.entity_view_display.node.product.teaser.yml
+++ b/config/clecotools/default/core.entity_view_display.node.product.teaser.yml
@@ -9,10 +9,10 @@ dependencies:
     - field.field.node.product.field_footnotes
     - field.field.node.product.field_long_description
     - field.field.node.product.field_media
-    - field.field.node.product.field_model_specification
     - field.field.node.product.field_product_classifications
     - field.field.node.product.field_product_features_cp
     - field.field.node.product.field_product_images
+    - field.field.node.product.field_product_models
     - field.field.node.product.field_related_products_ref
     - field.field.node.product.field_sku_group
     - field.field.node.product.field_upc
@@ -43,10 +43,10 @@ hidden:
   field_footnotes: true
   field_long_description: true
   field_media: true
-  field_model_specification: true
   field_product_classifications: true
   field_product_features_cp: true
   field_product_images: true
+  field_product_models: true
   field_related_products_ref: true
   field_sku_group: true
   field_upc: true
