--- a/config/clecotools/default/core.entity_form_display.media.product_downloads.default.yml
+++ b/config/clecotools/default/core.entity_form_display.media.product_downloads.default.yml
@@ -3,10 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.product_downloads.field_language
+    - field.field.media.product_downloads.field_listing_image
     - field.field.media.product_downloads.field_media_file
+    - field.field.media.product_downloads.field_type
     - media.type.product_downloads
   module:
     - file
+    - media_library
     - path
 id: media.product_downloads.default
 targetEntityType: media
@@ -15,27 +19,39 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_language:
+    type: options_select
+    weight: 8
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_listing_image:
+    type: media_library_widget
+    weight: 6
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
   field_media_file:
     type: file_generic
-    weight: 0
+    weight: 1
     region: content
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
-  langcode:
-    type: language_select
-    weight: 2
+  field_type:
+    type: options_select
+    weight: 7
     region: content
-    settings:
-      include_locked: true
+    settings: {  }
     third_party_settings: {  }
   name:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -43,20 +59,20 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 100
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     region: content
     settings:
       match_operator: CONTAINS
@@ -64,4 +80,5 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  langcode: true
