--- a/config/clecotools/default/core.entity_form_display.media.product_downloads.media_library.yml
+++ b/config/clecotools/default/core.entity_form_display.media.product_downloads.media_library.yml
@@ -4,7 +4,10 @@ status: true
 dependencies:
   config:
     - core.entity_form_mode.media.media_library
+    - field.field.media.product_downloads.field_language
+    - field.field.media.product_downloads.field_listing_image
     - field.field.media.product_downloads.field_media_file
+    - field.field.media.product_downloads.field_type
     - media.type.product_downloads
 id: media.product_downloads.media_library
 targetEntityType: media
@@ -21,7 +24,10 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_language: true
+  field_listing_image: true
   field_media_file: true
+  field_type: true
   langcode: true
   path: true
   status: true
