--- a/config/clecotools/default/core.entity_view_display.media.product_downloads.media_library.yml
+++ b/config/clecotools/default/core.entity_view_display.media.product_downloads.media_library.yml
@@ -4,7 +4,10 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.media_library
+    - field.field.media.product_downloads.field_language
+    - field.field.media.product_downloads.field_listing_image
     - field.field.media.product_downloads.field_media_file
+    - field.field.media.product_downloads.field_type
     - image.style.medium
     - media.type.product_downloads
   module:
@@ -27,7 +30,10 @@ content:
     region: content
 hidden:
   created: true
+  field_language: true
+  field_listing_image: true
   field_media_file: true
+  field_type: true
   langcode: true
   name: true
   search_api_excerpt: true
