APEX-124: Apache sole settings & other fixes

--- a/config/clecotools/local/core.extension.yml
+++ b/config/clecotools/local/core.extension.yml
@@ -9,6 +9,7 @@ module:
   advagg: 0
   advagg_css_minify: 0
   advagg_js_minify: 0
+  apex_migrations: 0
   atg_api: 0
   atg_callout: 0
   atg_ckeditor: 0
@@ -28,6 +29,7 @@ module:
   breakpoint: 0
   captcha: 0
   ckeditor: 0
+  cleco_migrations: 0
   color: 0
   comment: 0
   config: 0
@@ -98,6 +100,8 @@ module:
   menu_ui: 0
   metatag: 0
   migrate: 0
+  migrate_plus: 0
+  migrate_tools: 0
   mysql: 0
   node: 0
   options: 0
