--- a/config/gearwrench/default/views.view.new_products.yml
+++ b/config/gearwrench/default/views.view.new_products.yml
@@ -118,6 +118,7 @@ display:
               allow_secondary: false
               secondary_label: 'Advanced options'
               secondary_open: false
+              reset_button_always_show: false
             filter:
               field_product_classifications_target_id:
                 plugin_id: bef
