--- a/config/campbell/default/block.block.marketlistingpage.yml
+++ b/config/campbell/default/block.block.marketlistingpage.yml
@@ -1,23 +1,23 @@
-uuid: eca24792-d154-475d-a496-7b08cc09c11f
+uuid: e9a77b8d-887f-41f0-aaf3-ec319778e5ec
 langcode: en
 status: true
 dependencies:
   config:
-    - fixed_block_content.fixed_block_content.hero_image_media_center
+    - fixed_block_content.fixed_block_content.market_listing_page
   module:
     - fixed_block_content
     - system
   theme:
     - campbell
-id: heroimagemediacenter
+id: marketlistingpage
 theme: campbell
 region: pre_content
-weight: -19
+weight: -15
 provider: null
-plugin: 'fixed_block_content:hero_image_media_center'
+plugin: 'fixed_block_content:market_listing_page'
 settings:
-  id: 'fixed_block_content:hero_image_media_center'
-  label: 'Hero Image - Media Center'
+  id: 'fixed_block_content:market_listing_page'
+  label: 'Market listing page'
   label_display: '0'
   provider: fixed_block_content
   view_mode: ''
@@ -25,4 +25,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: /media-center
+    pages: /markets
