--- a/config/campbell/default/core.entity_view_display.node.markets.default.yml
+++ b/config/campbell/default/core.entity_view_display.node.markets.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.markets.field_market_logo
     - field.field.node.markets.field_related_products
     - field.field.node.markets.field_short_description
+    - field.field.node.markets.field_weight
     - node.type.markets
   module:
     - text
@@ -61,6 +62,7 @@ content:
     region: content
 hidden:
   field_listing_image: true
+  field_weight: true
   langcode: true
   links: true
   search_api_excerpt: true
