--- a/config/campbell/default/core.entity_view_display.node.markets.teaser.yml
+++ b/config/campbell/default/core.entity_view_display.node.markets.teaser.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.markets.field_market_logo
     - field.field.node.markets.field_related_products
     - field.field.node.markets.field_short_description
+    - field.field.node.markets.field_weight
     - node.type.markets
   module:
     - text
@@ -38,5 +39,6 @@ hidden:
   field_market_logo: true
   field_related_products: true
   field_short_description: true
+  field_weight: true
   langcode: true
   search_api_excerpt: true
